# sondir

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml  sweep.yml  watch.yml
canary/: results.md  run.sh
docs/drafts/: go-public-checklist.md  litesvm-agave41-wave-issue.md  mollusk-agave41-wave-issue.md
facts/: facts.toml
src/: checks.rs  facts.rs  fix.rs  main.rs  mcp.rs  project.rs  report.rs  resolve.rs  rpc.rs  sweep.rs  verify.rs  watch.rs
tests/: cli.rs  torture.rs
