[package]
name = "sondir"
version = "0.8.0"
edition = "2021"
description = "sondir — the soil test before you build. Pre-flight checks and version compatibility for Solana toolchains."
license = "MIT"
repository = "https://github.com/rifuki/sondir"
readme = "README.md"
keywords = ["solana", "anchor", "preflight", "mcp", "toolchain"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
solana-pubkey = { version = "3", features = ["curve25519", "sha2"] }
flate2 = "1.1.9"
semver = "1.0.28"

[profile.release]
lto = true
